[package]
name = "judy"
version = "0.0.3"
authors = ["Jason Toffaletti <toffaletti@gmail.com>", "KerfuffleV2 <kerfluffle@keemail.me>"]
description = "Rust bindings for Judy http://judy.sourceforge.net"
license = "Apache-2.0"
repository = "https://github.com/toffaletti/rust-judy.git"
readme = "README.md"
#links = "libjudy-sys"

include = [
    "src/*.rs",
    "test/*.rs",
    "Cargo.toml",
    "README.md",
]

[dependencies]
libc = "~0.2.6"

[lib]
name = "judy"
